--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.3",
     "gh-pages": "^6.3.0",
+    "next-sitemap": "^4.2.3",
     "postcss": "^8.5.3",
     "tailwindcss": "^4",
     "typescript": "^5"
