--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "swiper": "^11.2.6"
+    "swiper": "^11.2.6",
+    "next-sitemap": "^4.2.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -29,7 +30,6 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.3",
     "gh-pages": "^6.3.0",
-    "next-sitemap": "^4.2.3",
     "postcss": "^8.5.3",
     "tailwindcss": "^4",
     "typescript": "^5"
