--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
         run: npm install
 
       - name: Build and export
-        run: npm run build && npm run export
+        run: npm run build 
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
