--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "framer-motion": "^12.5.0",
     "git-filter-repo": "^0.0.30",
     "next": "15.2.3",
+    "next-sitemap": "^4.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "swiper": "^11.2.6",
-    "next-sitemap": "^4.2.3"
+    "swiper": "^11.2.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
